infra/kyverno/policies/global/automatically-add-reloader-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-reloader-annotation
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: add-reloader-annotation-to-deployments
      match:
        any:
          - resources:
              kinds:
                - Deployment
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              reloader.stakater.com/auto: "true"
